--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,30 @@
-<<<<<<< HEAD
-node_modules/
-vendor/
-dist/
-build/
-.env
-.env.local
-.env.*.local
-.DS_Store
-.vscode/settings.json
-.idea/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-storage/
-bootstrap/cache/
-public/build/
-public/storage/
-.env.backup
-.phpunit.result.cache
-=======
-*.log
-.DS_Store
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
 .env
 .env.backup
 .env.production
-.phpactor.json
 .phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vscode/settings.json
+*.log
+.DS_Store
+# Custom ignores from HEAD
+dist/
+build/
+.env.local
+.env.*.local
+.idea/
+storage/
+bootstrap/cache/
+# Additional Laravel defaults
 /.fleet
 /.idea
 /.nova
@@ -34,14 +32,5 @@ public/storage/
 /.vscode
 /.zed
 /auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
 /storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
 Thumbs.db
->>>>>>> 24cc638 (Initial setup: Laravel Sail, React, Inertia, and Shadcn UI)
